<resources>
    <string name="app_name">AppAttendance</string>

    <!-- General -->
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="create_subject">Criar turma</string>
    <string name="subject_code">Código da disciplina</string>
    <string name="class_title_placeholder">Título</string>

    <!-- MainActivity -->
    <string name="welcome">Bem-vindo(a),</string>
    <string name="username_placeholder">usuário</string>
    <string name="sign_out">Sair</string>
    <string name="subjects">Disciplinas</string>

    <!-- LoginActivity -->
    <string name="sign_in">Entrar</string>
    <string name="sign_up">Cadastre-se</string>

    <!-- RegisterActivity -->
    <string name="name">Nome Completo</string>
    <string name="username">Nome de Usuário</string>
    <string name="create_account">Criar Conta</string>
    <string name="professor">Professor</string>
    <string name="student">Aluno</string>
    <string name="registration_error">E-mail já cadastrado</string>

    <!-- AddSubjectActivity -->
    <string name="join_class">Participar da turma</string>
    <string name="insert_code">Peça para seu professor o código da turma e digite-o aqui</string>
    <string name="insert_code_hint">Código</string>
    <string name="join">Participar</string>

    <!-- CreateSubjectActivity -->
    <string name="subject_name">Nome da disciplina</string>
    <string name="classroom">Sala</string>
    <string name="course_load">Carga horária</string>
    <string name="week_days">Indique os dias da semana</string>
    <string name="time_range">Indique o horário de aula nesse dia</string>
    <string name="monday">Seg</string>
    <string name="tuesday">Ter</string>
    <string name="wednesday">Qua</string>
    <string name="thursday">Qui</string>
    <string name="friday">Sex</string>
    <string name="hour_placeholder">00h00</string>
    <string name="hyphen">-</string>
    <string name="schedule_warning">É necessário selecionar ao menos um dia e preencher seu horário</string>
    <string name="class_already_exists_error">Já existe uma turma para essa disciplina no período corrente. Código da
        turma:
    </string>

    <!-- SubjectDetailActivity-->
    <string name="classes">Aulas</string>
    <string name="class_date_placeholder">00/00/0000</string>
    <string name="class_attendance">Presença: </string>
    <string name="class_attendance_percent_placeholder">0</string>
    <string name="confirm_attendance">Confirmar presença</string>

    <!-- AddClassActivity -->
    <string name="class_date">Data: </string>
    <string name="create_class">Criar aula</string>

</resources>
