<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

    <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="126dp"
            android:hint="@string/email"
            android:autofillHints="@string/email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:layout_alignParentTop="true"/>

    <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            android:autofillHints="@string/password"
            android:imeActionLabel="@string/sign_in"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:layout_below="@id/edt_email"/>

    <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in"
            android:layout_below="@id/edt_password"
            android:layout_centerHorizontal="true"/>

    <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up"
            android:layout_below="@id/btn_sign_in"
            android:layout_centerHorizontal="true"/>

    <ProgressBar
            android:id="@+id/pb_loading"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerInParent="true"/>

</RelativeLayout>